# pre-commit-consistent-pip-requirements

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: tests.yml
src/consistent_pip_requirements/: check_requirements.py
tests/: conftest.py  test_check_requirements.py
tests/data/project/: requirements-dev.txt  requirements.txt
