[metadata]
name = consistent-pip-requirements
version = attr: consistent_pip_requirements.VERSION
author = Scott Searcy
author_email = smsearcy14@outlook.com
url = https://github.com/smsearcy/pre-commit-consistent-pip-requirements
description =
long_description = file: README.rst
license = MIT
python_requires = >=3.7, <4
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    check-requirements = consistent_pip_requirements.check_requirements:main

[options.extras_require]
dev =
    pip-tools
    pytest
